# maiwar-wq

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md
collector/: collector.py  collector.rkt  config.ini.sample  maiwar_wq.service  maiwar_wq.timer  measurements.json  measurements.xlsx  measurements_py.json  measurements_rkt.json
collector/python/: checker.py  collector.py  main.py  requirements.txt
collector/python/mwq_collector/: pyproject.toml
collector/python/mwq_collector/mwq_collector/: checker.py  collector.py  main.py  scraper.py
collector/racket/: checker.rkt  collector.rkt  collector_old.rkt
docs/data/: measurements.json
docs/js/: main.js
site/: index.html
site/css/: style.css
site/data/: measurements.json
site/js/: main.js
utils/: scour_map.sh
